# radio-tower

./: Cargo.toml  Makefile  README.md  build.rs  package-lock.json  tailwind.config.js
src/: index.css  main.js  main.rs  user_config.rs
src/app/: mini_torrent.rs  mod.rs  stats_bar.rs
src/app/pages/: home.rs  mod.rs  torrent.rs
src/app/ui/: data_point.rs  mod.rs  progress_bar.rs  torrent_status_icon.rs
src/transmission/: client.rs  mod.rs
static/: tailwind.css
