[package]
name = "radio-tower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
color-eyre = "0.6.2"
dioxus = "0.3.2"
dioxus-free-icons = { version = "0.6.0", features = ["ionicons", "feather"] }
dioxus-liveview = { version = "0.3.0", features = ["axum"] }
eyre = "0.6.8"
http = "0.2.9"
human_bytes = "0.4.2"
parking_lot = "0.12.1"
reqwest = { version = "0.11.17", features = ["serde_json", "json"] }
rust-embed = { version = "6.6.1", features = ["axum"] }
serde = "1.0.160"
serde_json = "1.0.96"
serde_repr = "0.1.12"
tokio = { version = "1.28.0", features = ["full"] }
tower-http = "0.4.0"
